# 2dv605

./: .gitignore  .~lock.cuda-results.ods#  CMakeLists.txt  Makefile  README.MD  calcpi-cuda.cu  calcpi-openmp.c  calcpi.c  calcpi.h  cuda-results.csv  cuda-results.ods  main.c  openmp-results.csv  openmp-results.ods  runtests.sh  timer.c  timer.h
